tests/fixtures/negative/complexity/CognitiveComplexMethod.kt
package complexity

class CognitiveComplexMethod {
    fun simpleFunction(x: Int): String {
        if (x > 0) {
            return "positive"
        }
        return "non-positive"
    }
}
